Refactor app structure and update dependencies
- Removed App.tsx and replaced it with a new routing structure using expo-router.
- Added new layout and index files for routing.
- Introduced an About page with navigation.
- Updated app.json to include new plugins and configurations.
- Enhanced package.json and package-lock.json with additional dependencies for React and React Native support.
- Modified tailwind.config.js to include new content paths for Tailwind CSS.

--- a/app.json
+++ b/app.json
@@ -3,28 +3,27 @@
     "name": "my-expo-app",
     "slug": "my-expo-app",
     "version": "1.0.0",
-
     "web": {
+      "bundler": "metro",
       "favicon": "./assets/favicon.png"
     },
-
     "experiments": {
       "tsconfigPaths": true
     },
-
-    "plugins": [],
-
+    "plugins": [
+      "expo-router"
+    ],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -33,6 +32,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
-    }
+    },
+    "scheme": "your-app-scheme"
   }
 }
